<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="5dp"
    android:layout_marginLeft="5dp"
    android:layout_marginEnd="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginBottom="5dp"
    android:fadeScrollbars="true"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/share_btn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/share_btn" />

        <Button
            android:id="@+id/rating_btn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/rating_btn" />

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web|email"
            android:linksClickable="true"
            android:textColor="@android:color/black"
            android:textSize="18dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/privacy_policy"
        android:text="@string/privacy_policy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:autoLink="web|email"
        android:gravity="center"
        android:linksClickable="true"
        android:padding="5dp"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18dp" />
</FrameLayout>
